# pyproject-cookiecutter-test

./: .flake8  .gitignore  LICENSE  Makefile  README.rst  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
src/pyproject_cookiecutter_test/: __init__.py
tests/: __init__.py  conftest.py  test_pyproject_cookiecutter_test.py
